11 -  add readme, add page-404, SEO

--- a/servicios/servicio-laboral.html
+++ b/servicios/servicio-laboral.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Jonathan Villafañe">
         <meta name="description" content="Asesoramiento laboral integral - Evaluación de distintas formas de contratación laboral - Inscripciones AFIP empleador, sindicatos, registros afines - Liquidación de sueldos y jornales mensuales o quincenales - Liquidación de Cargas sociales - Análisis y aplicación de los distintos convenios colectivos de trabajo, en la liqudación de sueldos y jornales, de acuerdo a cada actividad - Régimen de trabajadores autónomos.">
         <title>Estudio Contable JBV - Servicio Laboral</title>
         <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
@@ -167,27 +168,27 @@
               <section class="mb-1">
 
                 <!-- Linkedin -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/linkedIn-icon.png" alt="logo de LinkedIn">
                 </a>
 
                 <!-- Twitter -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/twitter-icon.png" alt="logo de Twitter">
                 </a>
 
                 <!-- Youtube -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/youtube-icon.png" alt="logo de Youtube">
                 </a>
 
                 <!-- Instagram -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/instagram-icon.png" alt="logo de Instagram">
                 </a>
 
                 <!-- Telegram -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/telegram-icon.png" alt="logo de Telegram">
                 </a>
 
