--- a/servicios/servicio-societario.html
+++ b/servicios/servicio-societario.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Jonathan Villafañe">
         <meta name="description" content="Asesoramiento y evaluación del tipo societario más conveniente para la actividad a desarrollar (S.A., SRL, DE HECHO, etc) - Asesoramiento en disolución, absorción y fusión de empresas - Trámites ante la I.G.J - Constitución de sociedades - Confección de Actas de Directorio, Asamblea y Registro de Accionistas - Inscripción del directorio en I.G.J. y publicación en el Boletín Oficial - Aumentos y disminución de Capital.">
         <title>Estudio Contable JBV - Servicio Societario</title>
         <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
@@ -155,27 +156,27 @@
               <section class="mb-1">
 
                 <!-- Linkedin -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/linkedIn-icon.png" alt="logo de LinkedIn">
                 </a>
 
                 <!-- Twitter -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/twitter-icon.png" alt="logo de Twitter">
                 </a>
 
                 <!-- Youtube -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/youtube-icon.png" alt="logo de Youtube">
                 </a>
 
                 <!-- Instagram -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/instagram-icon.png" alt="logo de Instagram">
                 </a>
 
                 <!-- Telegram -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="../page-404.html" role="button"
                   ><img src="../img/icons/social/telegram-icon.png" alt="logo de Telegram">
                 </a>
 
