--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Jonathan Villafañe">
         <meta name="description" content="Conocé nuestra historia, quiénes somos, y por qué tanta gente nos sigue eligiendo día a día.">
         <title>Estudio Contable JBV - Nosotros</title>
         <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
@@ -159,27 +160,27 @@
               <section class="mb-1">
 
                 <!-- Linkedin -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="page-404.html" role="button"
                   ><img src="img/icons/social/linkedIn-icon.png" alt="logo de LinkedIn">
                 </a>
 
                 <!-- Twitter -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="page-404.html" role="button"
                   ><img src="img/icons/social/twitter-icon.png" alt="logo de Twitter">
                 </a>
 
                 <!-- Youtube -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="page-404.html" role="button"
                   ><img src="img/icons/social/youtube-icon.png" alt="logo de Youtube">
                 </a>
 
                 <!-- Instagram -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="page-404.html" role="button"
                   ><img src="img/icons/social/instagram-icon.png" alt="logo de Instagram">
                 </a>
 
                 <!-- Telegram -->
-                <a class="btn btn-floating m-1" href="#!" role="button"
+                <a class="btn btn-floating m-1" href="page-404.html" role="button"
                   ><img src="img/icons/social/telegram-icon.png" alt="logo de Telegram">
                 </a>
 
