--- a/page-404.html
+++ b/page-404.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Jonathan Villafañe">
-        <meta name="description" content="Ponete en contacto con nosotros, de la manera que quieras. Estamos atentos a tu consulta.">
-        <title>Estudio Contable JBV - Contacto</title>
+        <meta name="description" content="Parece que no encontramos lo que buscás.">
+        <title>Estudio Contable JBV - ERROR</title>
         <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
@@ -66,8 +66,8 @@
 
         <!-- imagen banner -->
         <div class="container-fluid">
-          <section class="contactoBanner">
-            <img src="img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
+          <section class="contactoBanner mx-auto">
+            <img src="img/error.png" alt="imagen de dibujo en pizarron de caida de acciones en la bolsa" class="contactoImagen">
           </section>
         </div>
         
@@ -76,66 +76,11 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-5 contactoTitulo">
+        <main class="py-5 nosotrosTitulo">
             <div class="container-fluid">
-              <h1>CONTACTANOS</h1>
-                <div class="row">
-                  <div class="col-lg-12 py-5 mb-sm-5">
-                      <div class="contactoDatos">
-                        <h2>NUESTRA OFICINA</h2>
-                        <h3>Dirección: Av.XXX xxxx</h3>
-                        <h3>Teléfono: xxxx-xxxx</h3>
-                        <h3>E-mail: xxx@xxx.com</h3>
-                     </div>
-                  </div>
-
-                  <div class="col-lg-6 py-5 contactoFormulario">
-                    <h2 class="text-center">CONSULTANOS</h2>
-                    <form>
-                            <div class="form-row">
-
-                                <div class="col">
-                                    <input type="text" class="form-control form-control-lg text-center fs-1" placeholder="Nombre Completo">
-                                </div>
-
-                                <div class="col">
-                                    <input type="email" class="form-control form-control-lg text-center fs-1" placeholder="Email">
-                                </div>
-
-                                <div class="col">
-                                     <input type="tel" class="form-control form-control-lg text-center fs-1" placeholder="Teléfono">
-                                </div>
-
-                                <div class="col text-center fs-1">
-                                     <label for="consulta-tipo">Consulta de Tipo:</label>
-                                        <select class="custom-select my-1 mr-sm-2 fs-1 bg-white" id="inlineFormCustomSelectPref">
-                                            <option selected>Seleccionar Área</option>
-                                            <option value="contable">Contable</option>
-                                            <option value="tributaria">Tributaria</option>
-                                            <option value="financiera">Financiera</option>
-                                            <option value="societaria">Societaria</option>
-                                            <option value="laboral">Laboral</option>
-                                            <option value="otros">Otros Servicios</option>
-                                        </select>
-                                </div>
-
-                                <div class="col fs-3 text-center">
-                                    <textarea class="w-75 h-75" name="" id="consulta-texto" cols="40" rows="10"></textarea>
-                                    <br>
-                                    <input class="fs-1" type="reset" value="Cancelar">
-                                    <input class="fs-1" type="submit" value="Enviar">
-                                </div>   
-                            </div>
-                    </form>
-                  </div>
-
-                  <div class="col-lg-6">
-                    <div class="mt-5 mb-5 contactoMapa">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8461712097687!2d-58.37247184953265!3d-34.60805116513781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352cbe276f75%3A0xe16921ef0545f86d!2sCasa%20Rosada!5e0!3m2!1ses-419!2sar!4v1659829084526!5m2!1ses-419!2sar" width="854" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                  </div>
-
-                </div>
+              <h1 class="py-5">ALGO SALIÓ MAL :{</h1>
+              <div class="row py-5">
+              </div>
             </div>
         </main>
 
